<resources>
    <string name="app_name">quotescelebrities</string>
    <string name="quotes">Citas celebres</string>

    <string name="id">Id Quote</string>
    <string name="quote">Quote</string>
    <string name="author">Author</string>
    <string name="save">Add</string>

    <string name="menu_random">Quotes Random</string>
    <string name="menu_quote_randomly">Display quotes randomly</string>
    <string name="menu_quote_add">Quotes add</string>
    <string name="menu_quote_list">Quotes list</string>
    <string name="menu_user_login">Login</string>

    <string name="dialog_ok">OK</string>
    <string name="saved">Saved Successfully&#8230;</string>

    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_in">Sign in</string>
    <string name="token_required">Token is required, please authenticate first</string>

</resources>