<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="?attr/actionModePasteDrawable"
            android:title="@string/menu_random" />
        <item
            android:id="@+id/nav_quote_add"
            android:icon="@drawable/ic_baseline_add_24"
            android:title="@string/menu_quote_add" />
        <item
            android:id="@+id/nav_quote_list"
            android:icon="@android:drawable/ic_input_get"
            android:title="@string/menu_quote_list" />
        <item
            android:id="@+id/nav_login"
            android:icon="@drawable/ic_baseline_login_24"
            android:title="@string/menu_user_login" />
    </group>
</menu>